nivasa-macros/tests/trybuild/controller_api_tags_invalid.stderr
error: `#[api_tags]` tag cannot be empty
 --> tests/trybuild/controller_api_tags_invalid.rs:4:27
  |
4 | #[nivasa_macros::api_tags("")]
  |                           ^^

error[E0412]: cannot find type `UsersController` in this scope
 --> tests/trybuild/controller_api_tags_invalid.rs:8:6
  |
8 | impl UsersController {
  |      ^^^^^^^^^^^^^^^ not found in this scope

error: the `Self` constructor can only be used with tuple or unit structs
 --> tests/trybuild/controller_api_tags_invalid.rs:7:1
  |
7 | #[impl_controller]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `impl_controller` (in Nightly builds, run with -Z macro-backtrace for more info)
